# vid_siv

./: .gitignore  README.md  files_to_remove.txt  license.md  pyproject.toml  requirements.txt  start.py  vidsieve.py  vidsiv.log.1  vidsiv.log.2  vidsiv.py
vidsiv/: __init__.py  conf.py  finalize.py  getter.py  playlister.py  proclog.py  start.py  vidproc.py  vidsiv.py
